SPOON-1145 Add java, elasticsearch, mongo to install. Tomcat WIP